Removed unused database object
Signed-off-by: tcklpl <luan.negroni@aluno.ifsp.edu.br>